--- a/VtuberNoises/app/src/main/res/layout/app_menu.xml
+++ b/VtuberNoises/app/src/main/res/layout/app_menu.xml
@@ -5,7 +5,7 @@
     android:background="@color/darkblvck"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SettingsMenu">
+    tools:context=".AppMenu">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -14,13 +14,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+
+
         <TextView
-            android:id="@+id/settingsmenubtn"
+            android:id="@+id/MenuBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
             android:layout_marginBottom="12dp"
-            android:text="Settings"
+            android:text="Menu"
             android:textAlignment="center"
             android:textColor="@color/porcelain"
             android:textSize="40dp" />
@@ -45,6 +47,7 @@
                         android:layout_height="wrap_content" />
 
                     <androidx.cardview.widget.CardView
+                        android:layout_weight="1"
                         android:id="@+id/app_youtube"
                         android:layout_width="170dp"
                         android:layout_height="wrap_content"
@@ -93,6 +96,7 @@
                         android:layout_height="wrap_content" />
 
                     <androidx.cardview.widget.CardView
+                        android:layout_weight="1"
                         android:id="@+id/sounds"
                         android:layout_width="170dp"
                         android:layout_height="match_parent"
@@ -114,13 +118,13 @@
                                     android:layout_width="match_parent"
                                     android:layout_height="90dp"
                                     android:padding="32dp"
-                                    app:srcCompat="@drawable/abt_sound" />
+                                    app:srcCompat="@drawable/abt_settings" />
 
                                 <TextView
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:fontFamily="sans-serif-medium"
-                                    android:text="Sounds"
+                                    android:text="Settings"
                                     android:textAlignment="center"
                                     android:textColor="@color/darkporcelain"
                                     android:textSize="11sp" />
@@ -160,9 +164,59 @@
                         android:layout_height="wrap_content" />
 
                     <androidx.cardview.widget.CardView
+                        android:layout_weight="1"
                         android:id="@+id/app_version"
                         android:layout_width="170dp"
                         android:layout_height="wrap_content"
+                        app:cardBackgroundColor="@color/darkblvck"
+                        app:cardCornerRadius="15dp">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:padding="15dp">
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:orientation="vertical">
+
+                                <ImageView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="90dp"
+                                    android:padding="32dp"
+                                    app:srcCompat="@drawable/abt_version" />
+
+                                <TextView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:fontFamily="sans-serif-medium"
+                                    android:text="Version"
+                                    android:textAlignment="center"
+                                    android:textColor="@color/darkporcelain"
+                                    android:textSize="11sp" />
+
+                                <TextView
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:fontFamily="sans-serif-medium"
+                                    android:text="4.4.0"
+                                    android:textAlignment="center"
+                                    android:textColor="@color/porcelain" />
+                            </LinearLayout>
+
+                        </LinearLayout>
+                    </androidx.cardview.widget.CardView>
+
+                    <Space
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+
+                    <androidx.cardview.widget.CardView
+                        android:layout_weight="1"
+                        android:id="@+id/app_downloads"
+                        android:layout_width="170dp"
+                        android:layout_height="match_parent"
                         app:cardBackgroundColor="@color/darkblvck"
                         app:cardCornerRadius="15dp">
 
@@ -195,54 +249,7 @@
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:fontFamily="sans-serif-medium"
-                                    android:text="The Sauce"
-                                    android:textAlignment="center"
-                                    android:textColor="@color/porcelain" />
-                            </LinearLayout>
-
-                        </LinearLayout>
-                    </androidx.cardview.widget.CardView>
-
-                    <Space
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
-
-                    <androidx.cardview.widget.CardView
-                        android:id="@+id/character"
-                        android:layout_width="170dp"
-                        android:layout_height="match_parent"
-                        app:cardBackgroundColor="@color/darkblvck"
-                        app:cardCornerRadius="15dp">
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:padding="15dp">
-
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:orientation="vertical">
-
-                                <ImageView
-                                    android:layout_width="match_parent"
-                                    android:layout_height="90dp"
-                                    android:padding="32dp"
-                                    app:srcCompat="@drawable/abt_chara" />
-
-                                <TextView
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:fontFamily="sans-serif-medium"
-                                    android:text="Character"
-                                    android:textAlignment="center"
-                                    android:textColor="@color/darkporcelain"
-                                    android:textSize="11sp" />
-
-                                <TextView
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:fontFamily="sans-serif-medium"
+                                    android:text=""
                                     android:textAlignment="center"
                                     android:textColor="@color/porcelain" />
                             </LinearLayout>
@@ -273,6 +280,7 @@
                         android:layout_height="wrap_content" />
 
                     <androidx.cardview.widget.CardView
+                        android:layout_weight="1"
                         android:id="@+id/app_legal"
                         android:layout_width="170dp"
                         android:layout_height="wrap_content"
@@ -308,7 +316,7 @@
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:fontFamily="sans-serif-medium"
-                                    android:text="User Agreement, Privacy Policy, etc"
+                                    android:text="Terms &amp; Conditions, Privacy Policy, etc"
                                     android:textAlignment="center"
                                     android:textColor="@color/porcelain" />
                             </LinearLayout>
@@ -321,6 +329,7 @@
                         android:layout_height="wrap_content" />
 
                     <androidx.cardview.widget.CardView
+                        android:layout_weight="1"
                         android:id="@+id/more_apps"
                         android:layout_width="170dp"
                         android:layout_height="wrap_content"
